# fast-sphere-sums

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  fast-sphere-sums-config.h.in  namelist.txt
data-files/: 10242_icos_grid_areas.csv  10242_icos_grid_x.csv  10242_icos_grid_y.csv  10242_icos_grid_z.csv  1280_icos_grid_areas.csv  1280_icos_grid_x.csv  1280_icos_grid_y.csv  1280_icos_grid_z.csv  1536_cube_grid_areas.csv  1536_cube_grid_x.csv  1536_cube_grid_y.csv  1536_cube_grid_z.csv  162_icos_grid_areas.csv  162_icos_grid_x.csv  162_icos_grid_y.csv  162_icos_grid_z.csv  163842_icos_grid_areas.csv  163842_icos_grid_x.csv  163842_icos_grid_y.csv  163842_icos_grid_z.csv  20480_icos_grid_areas.csv  20480_icos_grid_x.csv  20480_icos_grid_y.csv  20480_icos_grid_z.csv  20_icos_grid_areas.csv  20_icos_grid_x.csv  20_icos_grid_y.csv  20_icos_grid_z.csv  24576_cube_grid_areas.csv  24576_cube_grid_x.csv  24576_cube_grid_y.csv  24576_cube_grid_z.csv  24_cube_grid_areas.csv  24_cube_grid_x.csv  24_cube_grid_y.csv  24_cube_grid_z.csv  2562_icos_grid_areas.csv  2562_icos_grid_x.csv  2562_icos_grid_y.csv  2562_icos_grid_z.csv  (+44 more)
executables/: CMakeLists.txt  bve.cpp  bve_time_evo.cpp  cube_sphere_grid_gen.cpp  direct_sum.cpp  fast_sum.cpp  fish_delta.cpp  gradient.cpp  icos_grid_gen.cpp  icos_grid_gen_centroid.cpp  inverse_biharmonic.cpp  inverse_laplacian.cpp  inverse_laplacian_reg.cpp  laplacian.cpp  lat_lon_grid_gen.cpp  sal.cpp  sal_derivs.cpp
job_scripts/: pbs_batch_time_il.sh  pbs_il_time0.sh  pbs_il_time1.sh  pbs_il_time2.sh  pbs_il_time3.sh  pbs_il_time4.sh  pbs_il_time5.sh  pbs_il_time6.sh  pbs_il_time7.sh  pbs_il_time8.sh  pbs_il_time9.sh  pbs_inverse_laplacian_start.sh
src/: CMakeLists.txt  direct_sum_funcs.cpp  direct_sum_funcs.hpp  fast_sum_funcs.cpp  fast_sum_funcs.hpp  fmm_funcs.cpp  fmm_funcs.hpp  general_utils.cpp  general_utils.hpp  initial_conditions.cpp  initial_conditions.hpp  initialize_tree.cpp  initialize_tree.hpp  interp_utils.cpp  interp_utils.hpp  io_utils.cpp  io_utils.hpp  mpi_utils.cpp  mpi_utils.hpp  structs.hpp
src/fast_sum_interactions/: bve_interactions.cpp  bve_interactions.hpp  inverse_biharmonic_interactions.cpp  inverse_biharmonic_interactions.hpp  inverse_laplacian_interactions.cpp  inverse_laplacian_interactions.hpp  laplacian_interactions.cpp  laplacian_interactions.hpp  sal_interactions.cpp  sal_interactions.hpp  sal_interactions_lat_deriv.cpp  sal_interactions_lat_deriv.hpp  sal_interactions_lon_deriv.cpp  sal_interactions_lon_deriv.hpp
src/fmm_interactions/: bve_interactions.cpp  bve_interactions.hpp  inverse_laplacian_interactions.cpp  inverse_laplacian_interactions.hpp
